modules/networking/main.tf
resource "aws_vpc" "main" {
    cidr_block = "10.0.0.0/16"
    enable_dns_support = true
    enable_dns_hostnames = true
    tags =  { Name = "Starman_Project_VPC"}
}

resource "aws_subnet" "public" {
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.1.0/24"
    map_public_ip_on_launch = true
    availability_zone = "us-east-1a"
    tags = {Name = "Starman_Projkect_-_Public_Subnet" }
}
resource "aws_internet_gateway" "gw"{ 
    vpc_id = aws_vpc.main.id
}
resource "aws_route_table" "public"{ 
    vpc_id = aws_vpc.main.id
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.gw.id
    }
}
resource "aws_route_table_association" "public" {
    subnet_id = aws_subnet.public.id
    route_table_id = aws_route_table.public.id
}
#VPC Endpoint for DynamoDB
resource "aws_vpc_endpoint" "dynamodb" {
    vpc_id = aws_vpc.main.id
    service_name = "com.amazonaws.us-east-1.dynamodb"
    route_table_ids = [aws_route_table.public.id]
}
